--- a/src/app/componentes/typescript/typescript.component.html
+++ b/src/app/componentes/typescript/typescript.component.html
@@ -314,4 +314,38 @@
     <li></li>
   </ul>
 
+  <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
+
+  <h3>Observable</h3>
+  <hr>
+
+  <ul>
+    <li>Un observable es similar a una promesa</li>
+    <li>Los métodos de un servicio HTTP son observables</li>
+  </ul>
+
+  <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
+
+  <h3>Suscripción</h3>
+  <hr>
+
+  <ul>
+    <li>Cuando deseamos utilizar el método de un servicio (un observable), debemos suscribirnos</li>
+  </ul>
+
+  <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
+
+  <h3 class="hidden">Programación reactiva</h3>
+  <hr class="hidden">
+
+  <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
+
+  <h3 class="hidden">Operadorex RXJS</h3>
+  <hr class="hidden">
+
+  <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
+
+  <h3 class="hidden">Inyección</h3>
+  <hr class="hidden">
+
 </div>
