--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,10 @@ $lightprimary: rgba(50,55,65,.25);
     margin-bottom: 40px !important;
 }
 
+.hidden {
+    display: none;
+}
+
 .pendiente {
     color: rgb(255,100,75);
     color: red;
