[ Inicio ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -32,7 +32,24 @@
   <hr>
 
   <ul>
-    <li>Angular CLI es una línea de comandos que nos permite gestionar proyectos de Angular desde consola</li>
+    <li>Angular CLI es una línea de comandos que nos permite gestionar proyectos de Angular desde consola de forma cómoda y rápida</li>
+  </ul>
+
+  <h4>3.1 Crear proyecto</h4>
+
+  <ul>
+    <li>Ejecutamos el comando <b>$ ng new _Nombre del proyecto_</b></li>
+    <li>Esto creará un nuevo directorio con el scafolding de Angular</li>
+  </ul>
+
+  <h4>3.2 Ejecutar proyecto</h4>
+
+  <ul>
+    <li>Desde el directorio de nuestro proyecto, ejecutamos el comando <b>$ ng serve</b></li>
+    <li>Tras esto, aparecerá por consola la URL que tendremos que pegar en el navegador web para ejecutar nuestro proyecto</li>
+    <li>Para que se abra directamente una pestaña del navegador web con el proyecto en marcha, ejecutamos el comando <b>$ ng serve -o</b></li>
+    <li>Si deseamos ejecutar más de un proyecto de Angular, tenemos que especificar un puerto dentro del comando de la forma <b>$ ng serve --port _Puerto_</b></li>
+    <li>Por defecto, Angular trabaja con el puerto <i>4200</i>, pero podemos utilizar cualquier otro, como el <i>8080</i></li>
   </ul>
 
   <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
